<resources>

    <string name="app_name">Shingiran Community</string>

    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_okk">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">User name should be at lest 2 or more characters</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="not_match_password">Password is not matched</string>
    <string name="login_failed">"Login failed"</string>

    <string name="create">Create</string>
    <string name="action_member">Members</string>
    <string name="action_back">Back</string>
    <string name="action_add">Add</string>
    <string name="popup_accept">Accept</string>
    <string name="popup_reject">Reject</string>
    <string name="popup_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Setting</string>

    <string name="txt_khatamal_quran">Khatam al Quran</string>
    <string name="announcement_txt">This is a fun event for us.</string>
    <string name="txt_host_name">From %1$s</string>
    <string name="txt_guest_name">Guests</string>
    <string name="txt_location">location</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

    <string name="txt_title_of_invitation">Title of the Invitation</string>

    <string name="registration_user">Join Community</string>
    <string name="submit_user">Submit</string>
    <string name="sign_in_user">Login</string>
    <string name="user_name">Username</string>
    <string name="user_full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="province">Province</string>
    <string name="home_phone">Home phone</string>
    <string name="cell_phone">Cell phone</string>
    <string name="work_phone">Work phone</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="announcement_tab">Announcements</string>
    <string name="event_tab">Events</string>
    <string name="community">community</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="confirm_incorrect_password">Confirm password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="do_save_user_info">Do want the system remember you</string>
    <string name="country">Country</string>
    <string name="join">Click to join</string>
    <string name="alert_dialog_ok">Select</string>
    <string name="fohtia">Fateah</string>
    <string name="txt_wedding_message">are getting married on</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="honor_messages">The honor of your presence is requested at the marriage of</string>
    <string name="txt_message_value">this is the item for announcement this is the item for announcement this is the item for announcement this is the item for announcement this is the item for announcement</string>


    <string name="event_prompt">Types</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hide_email_header">Hide email</string>

    <!-- Preference Titles -->
    <string name="show_email_header">Show email</string>
    <string name="hide_phone_header">Hide phone number</string>
    <string name="show_phone_header">Show phone number</string>
    <string name="logout_header">Logout</string>
    <string name="key_hide_email">KEY_HIDE_EMAIL</string>

    <!-- Preference key -->
    <string name="key_show_email">KEY_SHOW_EMAIL</string>
    <string name="key_hide_phone">KEY_HIDE_PHONE</string>
    <string name="key_show_phone">KEY_SHOW_PHONE</string>
    <string name="key_logout_">KEY_LOGOUT</string>
    <string name="lets_start">Let\'s Start!</string>
    <string name="password">Password</string>
    <string name="invited">Invited? Register</string>
    <string name="login">Login</string>

    <string name="create_account">Let\'s Create Account</string>
    <string name="existing_account">Existing Account? Login</string>
    <string name="register">Register</string>
    <string name="password_confirm">Retype Password</string>
    <string name="please_wait">Please wait</string>
    <string name="welcome_user">Welcome %s</string>
    <string name="version">Version</string>
    <string name="delete_event_confirm_title">Delete</string>
    <string name="delete_event_confirm_desc">Are you sure you\'d like to delete %s event?</string>
    <string name="delete_announcement_confirm_title">Delete</string>
    <string name="delete_announcement_confirm_desc">Are you sure you\'d like to delete %s announcement?</string>
    <string name="member_block_confirmation_title">Block</string>
    <string name="member_block_confirmation_desc">Are you sure you\'d like to block %s?</string>
    <string name="title_activity_auto_complele_place">Map</string>
    <string name="event_create_page_title">Create Event</string>
    <string name="event_name">Name</string>
    <string name="event_location">Location</string>
    <string name="event_type">Type</string>
    <string name="event_detail">Detail</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>
    <string name="event_name_example">John\'s Wedding Party</string>
    <string name="event_location_example">125 Colborne Ave, Toronto ON</string>
    <string name="validation_title">Required. Minimum 5 characters</string>
    <string name="validation_location">Proper address required</string>
    <string name="validation_date">Required</string>
    <string name="validation_time">Required</string>
    <string name="validation_type">Required</string>
    <string name="validation_desc">Required. Minimum 10 characters</string>
    <string name="by">created by</string>
    <string name="send_to">Share this %s</string>
    <string name="send_email_to">Send email to %s</string>
    <string name="must_be_admin">You must be an admin to perform this operation!</string>
    <string name="announcement_created">Announcement Created</string>
    <string name="announcement_create_failed">Failed to Create Event</string>
    <string name="event_created">Event Created</string>
    <string name="event_create_failed">Failed to Create Event</string>

    <string name="send_email_to_body">&lt;br /&gt;&lt;br /&gt;&lt;br /&gt;Shingiran Community Android</string>
    <string name="announcement_create_page_title">Create Announcement</string>

    <string-array name="event_types">
        <item>Event</item>
        <item>Wedding</item>
        <item>Party</item>
        <item>Fundraising</item>
        <item>Funeral</item>
        <item>Gathering</item>
        <item>Meeting</item>
    </string-array>

</resources>
