<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.locked.shingranicommunity.dashboard.UserListActivity">
    <item
        android:id="@+id/action_members"
        android:orderInCategory="100"
        android:icon="@drawable/ic_perm_identity_24dp"
        android:title="@string/action_member"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_member"
        android:icon="@drawable/ic_settings_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_lock"
        android:title="@string/action_logout"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        app:showAsAction="never" />
</menu>
