<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/content_margin"
                android:layout_marginVertical="@dimen/content_margin"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp">

                <LinearLayout
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingVertical="20dp"
                    android:paddingHorizontal="@dimen/form_horizontal_margin">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_name"
                        app:helperText="@string/event_name_example"
                        android:layout_marginBottom="@dimen/form_vertical_margin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/event_location_ti"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_location"
                        app:helperText="@string/event_location_example"
                        android:layout_marginBottom="@dimen/form_vertical_margin"
                        app:endIconDrawable="@drawable/ic_location_on_black_24dp"
                        app:endIconMode="custom">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPostalAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/form_vertical_margin">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/event_date"
                            app:startIconDrawable="@drawable/ic_date_range_black_24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/event_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:lines="1"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:inputType="none"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <Space
                            android:layout_width="@dimen/form_horizontal_margin"
                            android:layout_height="0dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/event_time"
                            app:startIconDrawable="@drawable/ic_access_time_black_24dp">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/event_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:lines="1"
                                android:cursorVisible="false"
                                android:focusable="false"
                                android:inputType="none"/>

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_type"
                        android:labelFor="@+id/event_type"
                        android:layout_marginBottom="@dimen/form_vertical_margin">

                        <AutoCompleteTextView
                            android:id="@+id/event_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_detail"
                        android:layout_marginBottom="@dimen/form_vertical_margin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/event_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine|textCapSentences"
                            android:gravity="top"
                            android:minLines="5"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            style="@style/Widget.MaterialComponents.Button"
                            android:id="@+id/create"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="@dimen/button_horizontal_padding"
                            android:layout_gravity="end"
                            android:text="@string/create" />

                    </FrameLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>